--- a/Lawyers/index.html
+++ b/Lawyers/index.html
@@ -4,7 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lawyers</title>
+    <title>AfroAI Innovate</title>
+
+    <!-- == META OG Social Media Ads == -->
+    <meta property="og:title" content="AfroAI Innovate" />
+    <meta property="og:url" content="https://afroaiinnovate.web.app" />
+    <meta property="og:image" content="https://afroaiinnovate.web.app/css/img/Facebook.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:desc revealription"
+        content="AfroAI Innovate Upcoming Event" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@AfroAI Innovate">
+    <meta name="twitter:title" content="AfroAI Innovate">
+    <meta name="twitter:desc revealription"
+        content="AfroAI Innovate Upcoming Event">
+    <meta name="twitter:image" content="https://afroaiinnovate.web.app/css/img/Twitter.png">
+    <meta name="twitter:player" content="https://afroaiinnovate.web.app">
+    <meta name="twitter:player:width" content="280">
+    <meta name="twitter:player:height" content="150">
 
     <!-- == Style == -->
     <link rel="stylesheet" href="css/style.css">
